--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <button
                         class="w3-border w3-half w3-border-red w3-button w3-bottombar w3-hover-light-grey w3-padding"
                         onclick="openForm('interactiveForm')">Build Your PC</button>
-                    <button class="w3-border w3-half w3-button w3-bottombar w3-hover-light-grey w3-padding"
+                    <button class="w3-border w3-half w3-border-blue w3-button w3-bottombar w3-hover-light-grey w3-padding"
                         onclick="openForm('customForm')">Your Custom Request</button>
                 </div>
 
@@ -386,7 +386,8 @@
                     <form id="cform" method="POST"
                         action="https://script.google.com/macros/s/AKfycbzK2Fw1ZHc54FVrV55NzxvUZM8I2uSk9QCTYjydhSSHnu1h1Kils00tabHPtTG4vemeLw/exec">
                         <div class="w3-section">
-                            <labe>Enter your Custom Build Request</label>
+                            <labe><b>Enter your Custom Build Request - for </b><span class="w3-large w3-text-red"><b><a
+                                href="#faqs">FAQs.</a></b></span></label>
 
                                 <fieldset>
                                     <legend>Personal Details</legend>
