--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                     <form id="cform" method="POST"
                         action="https://script.google.com/macros/s/AKfycbzK2Fw1ZHc54FVrV55NzxvUZM8I2uSk9QCTYjydhSSHnu1h1Kils00tabHPtTG4vemeLw/exec">
                         <div class="w3-section">
-                            <labe><b>Enter your Custom Build Request - for </b><span class="w3-large w3-text-red"><b><a
+                            <labe><b>Enter your Custom Build Request.</b> If you have questions click here to go to <span class="w3-large w3-text-red"><b><a
                                 href="#faqs">FAQs.</a></b></span></label>
 
                                 <fieldset>
