--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
                 <hr style="width:50px;border:5px solid red" class="w3-round"-->
             </div>
 
+            <!--Announcement-->
+            <div class="w3-container w3-border w3-margin-left w3-margin-right">
+                <p>For RTX 4000 sereis Graphics cards and other parts not in the <span class="w3-text-red">"Build Your PC"</span> form use the <span class="w3-text-blue">"Your Custom Request"</span> form</p>
+            </div>
+
 
             <!-- Build Your PC -->
-            <div class="w3-container" id="contact" style="margin-top:75px">
+            <div class="w3-container" id="contact" style="margin-top:25px">
                 <h1 class="w3-xxxlarge w3-text-red"><b>Build Your PC.</b></h1>
                 <hr style="width:50px;border:5px solid red" class="w3-round">
                 <p>Submit your specification for price quote</p>
