--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <!--Announcement-->
             <div class="w3-container w3-border w3-margin-left w3-margin-right">
-                <p>For RTX 4000 sereis Graphics cards and other parts not in the <span class="w3-text-red">"Build Your PC"</span> form use the <span class="w3-text-blue">"Your Custom Request"</span> form</p>
+                <p>For RTX 4000 series Graphics cards and other parts not in the <span class="w3-text-red">"Build Your PC"</span> form use the <span class="w3-text-blue">"Your Custom Request"</span> form</p>
             </div>
 
 
